=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13 to Asterisk 14 --------------------
------------------------------------------------------------------------------

Applications
------------------

BridgeAdd
------------------
 * A new application in Asterisk, this will join the calling channel
   to an existing bridge containing the named channel prefix.

ConfBridge
------------------
 * Added the ability to pass options to MixMonitor when recording is used with
   ConfBridge. This includes the addition of the following configuration
   parameters for the 'bridge' object:
   - record_file_timestamp: whether or not to append the start time to the
     recorded file name
   - record_options: the options to pass to the MixMonitor application
   - record_command: a command to execute when recording is finished
   Note that these options may also be with the CONFBRIDGE function.

ControlPlayback
------------------
 * Remote files can now be retrieved and played back. See the Playback
   dialplan application for more details.

Playback
------------------
 * Remote files can now be retrieved and played back via the Playback and other
   media playback dialplan applications. This is done by directly providing
   the URL to play to the dialplan application:
     same => n,Playback(http://1.1.1.1/howler-monkeys-fl.wav)
   Note that unlike 'normal' media files, the entire URI to the file must be
   provided, including the file extension. Currently, on HTTP and HTTPS URI
   schemes are supported.

SMS
------------------
 * Added the 'n' option, which prevents the SMS from being written to the log
   file. This is needed for those countries with privacy laws that require
   providers to not log SMS content.


CDRs
------------------
cdr_odbc
------------------